k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: plantkart
spec:
  selector:
    app: plantkart-backend
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
