k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: plantkart
spec:
  selector:
    app: plantkart-frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
